--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -2,8 +2,8 @@ name: Build and Deploy Server
 
 on:
   push:
-    paths:
-      - server/**
+    # paths:
+    #   - server/**
     branches:
       - main
 
@@ -35,6 +35,5 @@ jobs:
           target-server: ${{ secrets.SSH_HOST }}
           remote-user: ${{ secrets.SSH_USER }}
           private-ssh-key: ${{ secrets.SSH_KEY }}
-          source-path: server/dist/
+          source-path: ./server/dist/
           destination-path: ./
-          rsync-options: --chmod=+X -a
