Let’s add some tests for the client. Tests should focus on core functionality and give us confidence that we are making the right changes even as we embark on a refactor to make the code cleaner and more manageable.

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run build:test && node --experimental-specifier-resolution=node --test dist-tests/tests/*.test.js",
+    "build:test": "rm -rf dist-tests && tsc -p tsconfig.test.json"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
